--- a/CloudConfig/src/main/resources/configurations/gateway.yml
+++ b/CloudConfig/src/main/resources/configurations/gateway.yml
@@ -1,4 +1,3 @@
-
 eureka:
   client:
     register-with-eureka: false
@@ -21,3 +20,12 @@ spring:
           uri: http://localhost:9099
           predicates:
             - Path=/movie/**
+        - id: reviewservice
+          uri: http://localhost:9101
+          predicates:
+            - Path=/review/**
+        - id: recommedservice
+          uri: http://localhost:9102
+          predicates:
+            - Path=/recommend/**
+
