--- a/Movie-Service/src/main/resources/application.yml
+++ b/Movie-Service/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
   config:
     import: optional:configserver:http://localhost:8888
 
-#server:
-#  port: 2238
+server:
+  port: 2238
 #
 #spring:
 #  application:
